@@ -14,25 +14,25 @@ import static com.faendir.zachtronics.bot.model.sc.ScCategory.ScScoreComparators
 
 @RequiredArgsConstructor
 public enum ScCategory implements Category<ScCategory, ScScore, ScPuzzle> {
-    CYCLES("C", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
-    SYMBOLS("S", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
-    RC("RC", comparatorRCS, Collections.singleton(ScType.PRODUCTION), false),
-    RS("RS", comparatorRSC, Collections.singleton(ScType.PRODUCTION), false),
+    CYCLES("C", "c/r/s[/BP]", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
+    SYMBOLS("S", "c/r/s[/BP]", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
+    RC("RC", "c/r/s[/BP]", comparatorRCS, Collections.singleton(ScType.PRODUCTION), false),
+    RS("RS", "c/r/s[/BP]", comparatorRSC, Collections.singleton(ScType.PRODUCTION), false),
 
-    CNB("CNB", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
-    SNB("SNB", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
-    RCNB("RCNB", comparatorRCS, Collections.singleton(ScType.PRODUCTION), false),
-    RSNB("RSNB", comparatorRSC, Collections.singleton(ScType.PRODUCTION), false),
+    CNB("CNB", "c/r/s[/P]", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
+    SNB("SNB", "c/r/s[/P]", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), false),
+    RCNB("RCNB", "c/r/s[/P]", comparatorRCS, Collections.singleton(ScType.PRODUCTION), false),
+    RSNB("RSNB", "c/r/s[/P]", comparatorRSC, Collections.singleton(ScType.PRODUCTION), false),
 
-    CNP("CNP", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), true),
-    SNP("SNP", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), true),
-    RCNP("RCNP", comparatorRCS, Collections.singleton(ScType.PRODUCTION), true),
-    RSNP("RSNP", comparatorRSC, Collections.singleton(ScType.PRODUCTION), true);
+    CNP("CNP", "c/r/s[/B]", comparatorCRS, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), true),
+    SNP("SNP", "c/r/s[/B]", comparatorSRC, Set.of(ScType.RESEARCH, ScType.PRODUCTION, ScType.PRODUCTION_TRIVIAL), true),
+    RCNP("RCNP", "c/r/s[/B]", comparatorRCS, Collections.singleton(ScType.PRODUCTION), true),
+    RSNP("RSNP", "c/r/s[/B]", comparatorRSC, Collections.singleton(ScType.PRODUCTION), true);
 
-    @Getter
-    private final String contentDescription = "c/r/s";
     @Getter
     private final String displayName;
+    @Getter
+    private final String contentDescription;
     private final Comparator<ScScore> comparator;
     private final Set<ScType> supportedTypes;
     private final boolean needsRandomness;
@@ -49,7 +49,7 @@ public enum ScCategory implements Category<ScCategory, ScScore, ScPuzzle> {
 
     @Override
     public boolean supportsScore(@NotNull ScScore score) {
-        return true;
+        return !score.usesPrecognition() || needsRandomness;
     }
 
     static class ScScoreComparators {
